Convert to Spring Boot Project

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,24 @@
-*.class
+target/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-.idea
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-build
-bin
-target
-.settings
-.gradle
-.DS_Store
+### STS ###
+.apt_generated
 .classpath
+.factorypath
 .project
-$tf
-.vagrant
-Vagrantfile
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
